# VUT-FIT

./: README.md
IAL/: Makefile  README.md
IAL/src/: list_color.c  list_edge.c  list_edge.h  list_m_coloring.c  list_m_coloring.h  load_file.c  load_file.h  structures.h
IAL/tests/good_tests/: greed_left.txt  input_10.txt  input_1000.txt  input_10000.txt  input_100000.txt  input_australia.txt
INP/: uart.vhd  uart_fsm.vhd  uart_tb.vhd
IOS/: proj2.c  proj2.h
ISJ-projects/: isj_proj1.py  isj_proj2.py  isj_proj3.py  isj_proj4.py  isj_proj5.py  isj_proj6.py  isj_proj7.py  isj_proj8.py
IZP/: proj1.c  proj2.c
ial21-main/: CMakeLists.txt  Doxyfile  README.md  input_generator.py
ial21-main/src/: list_color.h  list_neighbor.c  list_neighbor.h  m_coloring.c  m_coloring.h  main.c
ial21-main/tests/bad_tests/: simple_03.txt
ial21-main/tests/good_tests/: greed_right.txt  petersen_graph.txt
